# hyper-chess-engine

./: .gitignore  CMakeLists.txt  README.md  bench.txt  bitboard-utility.c  bitboard-utility.h  de-bruijn-sequence-gen.c  hyper-active.c  magic-gen.c  makefile  quick.txt
battle-ring/: analyze.js  engine-process.js  engine.js  fetch-pos.js  gen-pos.js  index.js  match-handler.js  package-lock.json
battle-ring/game-logic/: coords.js  game.js  move.js  piece.js  pre-game.js  san.js
battle-ring/viewer/: index.html
battle-ring/viewer/scripts/game/: coords.js  game.js  move.js  piece.js  pre-game.js  san.js
battle-ring/viewer/scripts/network/: game-loading.js  network.js
battle-ring/viewer/scripts/observers/: animations.js
battle-ring/viewer/styles/: game-loading.css  peer-info.css  style.css
magic-gen/: magic-gen.c
src/: bitboard-utility.c  bitboard-utility.h  debug.c  debug.h  defines.c  defines.h  evaluate-defines.c  evaluate-defines.h  evaluate.c  evaluate.h  game-analysis.c  game-analysis.h  hyper-active.c  look-up-tables.c  look-up-tables.h  magic-bitboards.c  magic-bitboards.h  magic-gen.c  make-unmake.c  make-unmake.h  move-ordering.c  move-ordering.h  move.c  move.h  p-board.c  p-board.h  perft.c  perft.h  pins.c  pins.h  position-defines.c  search-defines.h  test-suite.c  test-suite.h  think.c  think.h  transposition-table.c  transposition-table.h  uci.c  uci.h  (+3 more)
src/app/: hyper-active.c
src/debug/: debug.c  debug.h  test-suite.c  test-suite.h
src/eval/: evaluate-defines.c  evaluate-defines.h  evaluate.c  evaluate.h
src/movegen/: bitboard-utility.h  look-up-tables.c  look-up-tables.h  magic-bitboards.h  make-unmake.c  make-unmake.h  move.c  position-defines.c  position-defines.h
src/platform/: platform.h  platform_linux.c  platform_web.c  platform_win.c
src/search/: move-ordering.c  move-ordering.h  perft.c  perft.h  search-defines.h  think.c  think.h  transposition-table.c  transposition-table.h
src/uci/: uci.c  uci.h
